@@ -7,9 +7,9 @@ Last-Update: 2015-12-04
 +++ python-pycadf-2.0.1/requirements.txt
 @@ -3,6 +3,6 @@
  # process, which may cause wedges in the gate later.
- oslo.config>=2.7.0 # Apache-2.0
+ oslo.config>=3.7.0 # Apache-2.0
  oslo.serialization>=1.10.0 # Apache-2.0
--pytz>=2013.6
+-pytz>=2013.6 # MIT
 +pytz
- six>=1.9.0
- debtcollector>=0.3.0 # Apache-2.0
+ six>=1.9.0 # MIT
+ debtcollector>=1.2.0 # Apache-2.0
