@@ -2,6 +2,7 @@ python-pycadf (2.2.0-1) unstable; urgency=medium
 
   * New upstream release.
   * Fixed (build-)depends for this release.
+  * Updated fix-pytz-version-in-requirements.txt.patch
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 19:58:02 +0000
 
